Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-8951

[C++] Fix compiler warning in compute/kernels/scalar_cast_temporal.cc

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.0.0
    • C++

    Description

      The kernel functor can return an uninitialized value on errors

      ../src/arrow/compute/kernels/scalar_cast_temporal.cc: In member function ‘OUT arrow::compute::internal::ParseTimestamp::Call(arrow::compute::KernelContext*, ARG0) const [with OUT = long int; ARG0 = nonstd::sv_lite::basic_string_view<char>]’:
      ../src/arrow/compute/kernels/scalar_cast_temporal.cc:267:12: warning: ‘result’ may be used uninitialized in this function [-Wmaybe-uninitialized]
           return result;
      

      Attachments

        Issue Links

          Activity

            People

              wesm Wes McKinney
              wesm Wes McKinney
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 50m
                  1h 50m