ARROW-8951: [C++] Fix compiler warnings on gcc8 in release builds

Closes #7330 from wesm/ARROW-8951

Authored-by: Wes McKinney <wesm@apache.org>
Signed-off-by: Wes McKinney <wesm@apache.org>